feat(utility): complete conversion of semantic day night css to tailwind v4

--- a/playground/utility/border-color.html
+++ b/playground/utility/border-color.html
@@ -124,6 +124,188 @@
     </sgds-table>
   </section>
 
+  <section class="sgds:mb-2-xl">
+    <h2>Accent Border Colors</h2>
+    <sgds-table>
+      <sgds-table-row>
+        <sgds-table-head>SGDS Tailwind Token</sgds-table-head>
+        <sgds-table-head>CSS Variable</sgds-table-head>
+        <sgds-table-head>Preview</sgds-table-head>
+      </sgds-table-row>
+      <sgds-table-row>
+        <sgds-table-cell><code>sgds:border-accent-default</code></sgds-table-cell>
+        <sgds-table-cell><code>--sgds-accent-border-color-default</code></sgds-table-cell>
+        <sgds-table-cell><div class="border-demo sgds:border-accent-default sgds:p-md">Standard accent border</div></sgds-table-cell>
+      </sgds-table-row>
+      <sgds-table-row>
+        <sgds-table-cell><code>sgds:border-accent-emphasis</code></sgds-table-cell>
+        <sgds-table-cell><code>--sgds-accent-border-color-emphasis</code></sgds-table-cell>
+        <sgds-table-cell><div class="border-demo sgds:border-accent-emphasis sgds:p-md">Emphasized accent border for focus</div></sgds-table-cell>
+      </sgds-table-row>
+      <sgds-table-row>
+        <sgds-table-cell><code>sgds:border-accent-muted</code></sgds-table-cell>
+        <sgds-table-cell><code>--sgds-accent-border-color-muted</code></sgds-table-cell>
+        <sgds-table-cell><div class="border-demo sgds:border-accent-muted sgds:p-md">Subtle accent border</div></sgds-table-cell>
+      </sgds-table-row>
+    </sgds-table>
+  </section>
+
+  <section class="sgds:mb-2-xl">
+    <h2>Success Border Colors</h2>
+    <sgds-table>
+      <sgds-table-row>
+        <sgds-table-head>SGDS Tailwind Token</sgds-table-head>
+        <sgds-table-head>CSS Variable</sgds-table-head>
+        <sgds-table-head>Preview</sgds-table-head>
+      </sgds-table-row>
+      <sgds-table-row>
+        <sgds-table-cell><code>sgds:border-success-default</code></sgds-table-cell>
+        <sgds-table-cell><code>--sgds-success-border-color-default</code></sgds-table-cell>
+        <sgds-table-cell><div class="border-demo sgds:border-success-default sgds:p-md">Standard success border</div></sgds-table-cell>
+      </sgds-table-row>
+      <sgds-table-row>
+        <sgds-table-cell><code>sgds:border-success-emphasis</code></sgds-table-cell>
+        <sgds-table-cell><code>--sgds-success-border-color-emphasis</code></sgds-table-cell>
+        <sgds-table-cell><div class="border-demo sgds:border-success-emphasis sgds:p-md">Emphasized success border for focus</div></sgds-table-cell>
+      </sgds-table-row>
+      <sgds-table-row>
+        <sgds-table-cell><code>sgds:border-success-muted</code></sgds-table-cell>
+        <sgds-table-cell><code>--sgds-success-border-color-muted</code></sgds-table-cell>
+        <sgds-table-cell><div class="border-demo sgds:border-success-muted sgds:p-md">Subtle success border</div></sgds-table-cell>
+      </sgds-table-row>
+    </sgds-table>
+  </section>
+
+  <section class="sgds:mb-2-xl">
+    <h2>Danger Border Colors</h2>
+    <sgds-table>
+      <sgds-table-row>
+        <sgds-table-head>SGDS Tailwind Token</sgds-table-head>
+        <sgds-table-head>CSS Variable</sgds-table-head>
+        <sgds-table-head>Preview</sgds-table-head>
+      </sgds-table-row>
+      <sgds-table-row>
+        <sgds-table-cell><code>sgds:border-danger-default</code></sgds-table-cell>
+        <sgds-table-cell><code>--sgds-danger-border-color-default</code></sgds-table-cell>
+        <sgds-table-cell><div class="border-demo sgds:border-danger-default sgds:p-md">Standard danger border</div></sgds-table-cell>
+      </sgds-table-row>
+      <sgds-table-row>
+        <sgds-table-cell><code>sgds:border-danger-emphasis</code></sgds-table-cell>
+        <sgds-table-cell><code>--sgds-danger-border-color-emphasis</code></sgds-table-cell>
+        <sgds-table-cell><div class="border-demo sgds:border-danger-emphasis sgds:p-md">Emphasized danger border for focus</div></sgds-table-cell>
+      </sgds-table-row>
+      <sgds-table-row>
+        <sgds-table-cell><code>sgds:border-danger-subtle</code></sgds-table-cell>
+        <sgds-table-cell><code>--sgds-danger-border-color-subtle</code></sgds-table-cell>
+        <sgds-table-cell><div class="border-demo sgds:border-danger-subtle sgds:p-md">Subtle danger border</div></sgds-table-cell>
+      </sgds-table-row>
+    </sgds-table>
+  </section>
+
+  <section class="sgds:mb-2-xl">
+    <h2>Warning Border Colors</h2>
+    <sgds-table>
+      <sgds-table-row>
+        <sgds-table-head>SGDS Tailwind Token</sgds-table-head>
+        <sgds-table-head>CSS Variable</sgds-table-head>
+        <sgds-table-head>Preview</sgds-table-head>
+      </sgds-table-row>
+      <sgds-table-row>
+        <sgds-table-cell><code>sgds:border-warning-default</code></sgds-table-cell>
+        <sgds-table-cell><code>--sgds-warning-border-color-default</code></sgds-table-cell>
+        <sgds-table-cell><div class="border-demo sgds:border-warning-default sgds:p-md">Standard warning border</div></sgds-table-cell>
+      </sgds-table-row>
+      <sgds-table-row>
+        <sgds-table-cell><code>sgds:border-warning-emphasis</code></sgds-table-cell>
+        <sgds-table-cell><code>--sgds-warning-border-color-emphasis</code></sgds-table-cell>
+        <sgds-table-cell><div class="border-demo sgds:border-warning-emphasis sgds:p-md">Emphasized warning border for focus</div></sgds-table-cell>
+      </sgds-table-row>
+      <sgds-table-row>
+        <sgds-table-cell><code>sgds:border-warning-subtle</code></sgds-table-cell>
+        <sgds-table-cell><code>--sgds-warning-border-color-subtle</code></sgds-table-cell>
+        <sgds-table-cell><div class="border-demo sgds:border-warning-subtle sgds:p-md">Subtle warning border</div></sgds-table-cell>
+      </sgds-table-row>
+    </sgds-table>
+  </section>
+
+  <section class="sgds:mb-2-xl">
+    <h2>Purple Border Colors</h2>
+    <sgds-table>
+      <sgds-table-row>
+        <sgds-table-head>SGDS Tailwind Token</sgds-table-head>
+        <sgds-table-head>CSS Variable</sgds-table-head>
+        <sgds-table-head>Preview</sgds-table-head>
+      </sgds-table-row>
+      <sgds-table-row>
+        <sgds-table-cell><code>sgds:border-purple-default</code></sgds-table-cell>
+        <sgds-table-cell><code>--sgds-purple-border-color-default</code></sgds-table-cell>
+        <sgds-table-cell><div class="border-demo sgds:border-purple-default sgds:p-md">Standard purple border</div></sgds-table-cell>
+      </sgds-table-row>
+      <sgds-table-row>
+        <sgds-table-cell><code>sgds:border-purple-emphasis</code></sgds-table-cell>
+        <sgds-table-cell><code>--sgds-purple-border-color-emphasis</code></sgds-table-cell>
+        <sgds-table-cell><div class="border-demo sgds:border-purple-emphasis sgds:p-md">Emphasized purple border for focus</div></sgds-table-cell>
+      </sgds-table-row>
+      <sgds-table-row>
+        <sgds-table-cell><code>sgds:border-purple-muted</code></sgds-table-cell>
+        <sgds-table-cell><code>--sgds-purple-border-color-muted</code></sgds-table-cell>
+        <sgds-table-cell><div class="border-demo sgds:border-purple-muted sgds:p-md">Subtle purple border</div></sgds-table-cell>
+      </sgds-table-row>
+    </sgds-table>
+  </section>
+
+  <section class="sgds:mb-2-xl">
+    <h2>Cyan Border Colors</h2>
+    <sgds-table>
+      <sgds-table-row>
+        <sgds-table-head>SGDS Tailwind Token</sgds-table-head>
+        <sgds-table-head>CSS Variable</sgds-table-head>
+        <sgds-table-head>Preview</sgds-table-head>
+      </sgds-table-row>
+      <sgds-table-row>
+        <sgds-table-cell><code>sgds:border-cyan-default</code></sgds-table-cell>
+        <sgds-table-cell><code>--sgds-cyan-border-color-default</code></sgds-table-cell>
+        <sgds-table-cell><div class="border-demo sgds:border-cyan-default sgds:p-md">Standard cyan border</div></sgds-table-cell>
+      </sgds-table-row>
+      <sgds-table-row>
+        <sgds-table-cell><code>sgds:border-cyan-emphasis</code></sgds-table-cell>
+        <sgds-table-cell><code>--sgds-cyan-border-color-emphasis</code></sgds-table-cell>
+        <sgds-table-cell><div class="border-demo sgds:border-cyan-emphasis sgds:p-md">Emphasized cyan border for focus</div></sgds-table-cell>
+      </sgds-table-row>
+      <sgds-table-row>
+        <sgds-table-cell><code>sgds:border-cyan-muted</code></sgds-table-cell>
+        <sgds-table-cell><code>--sgds-cyan-border-color-muted</code></sgds-table-cell>
+        <sgds-table-cell><div class="border-demo sgds:border-cyan-muted sgds:p-md">Subtle cyan border</div></sgds-table-cell>
+      </sgds-table-row>
+    </sgds-table>
+  </section>
+
+  <section class="sgds:mb-2-xl">
+    <h2>Neutral Border Colors</h2>
+    <sgds-table>
+      <sgds-table-row>
+        <sgds-table-head>SGDS Tailwind Token</sgds-table-head>
+        <sgds-table-head>CSS Variable</sgds-table-head>
+        <sgds-table-head>Preview</sgds-table-head>
+      </sgds-table-row>
+      <sgds-table-row>
+        <sgds-table-cell><code>sgds:border-neutral-default</code></sgds-table-cell>
+        <sgds-table-cell><code>--sgds-neutral-border-color-default</code></sgds-table-cell>
+        <sgds-table-cell><div class="border-demo sgds:border-neutral-default sgds:p-md">Standard neutral border</div></sgds-table-cell>
+      </sgds-table-row>
+      <sgds-table-row>
+        <sgds-table-cell><code>sgds:border-neutral-emphasis</code></sgds-table-cell>
+        <sgds-table-cell><code>--sgds-neutral-border-color-emphasis</code></sgds-table-cell>
+        <sgds-table-cell><div class="border-demo sgds:border-neutral-emphasis sgds:p-md">Emphasized neutral border for focus</div></sgds-table-cell>
+      </sgds-table-row>
+      <sgds-table-row>
+        <sgds-table-cell><code>sgds:border-neutral-muted</code></sgds-table-cell>
+        <sgds-table-cell><code>--sgds-neutral-border-color-muted</code></sgds-table-cell>
+        <sgds-table-cell><div class="border-demo sgds:border-neutral-muted sgds:p-md">Subtle neutral border</div></sgds-table-cell>
+      </sgds-table-row>
+    </sgds-table>
+  </section>
+
   <section>
     <h2>Combined Examples</h2>
     
@@ -159,6 +341,38 @@
         <div class="border-demo sgds:border-muted sgds:p-md">Muted border</div>
       </div>
     </div>
+  </section>
+
+  <section class="sgds:mb-2-xl">
+    <h2>Form Success Border Color</h2>
+    <sgds-table>
+      <sgds-table-row>
+        <sgds-table-head>SGDS Tailwind Token</sgds-table-head>
+        <sgds-table-head>CSS Variable</sgds-table-head>
+        <sgds-table-head>Preview</sgds-table-head>
+      </sgds-table-row>
+      <sgds-table-row>
+        <sgds-table-cell><code>sgds:border-form-success-default</code></sgds-table-cell>
+        <sgds-table-cell><code>--sgds-form-success-border-color-default</code></sgds-table-cell>
+        <sgds-table-cell><div class="border-demo sgds:border-form-success-default sgds:p-md">Form success border</div></sgds-table-cell>
+      </sgds-table-row>
+    </sgds-table>
+  </section>
+
+  <section class="sgds:mb-2-xl">
+    <h2>Form Danger Border Color</h2>
+    <sgds-table>
+      <sgds-table-row>
+        <sgds-table-head>SGDS Tailwind Token</sgds-table-head>
+        <sgds-table-head>CSS Variable</sgds-table-head>
+        <sgds-table-head>Preview</sgds-table-head>
+      </sgds-table-row>
+      <sgds-table-row>
+        <sgds-table-cell><code>sgds:border-form-danger-default</code></sgds-table-cell>
+        <sgds-table-cell><code>--sgds-form-danger-border-color-default</code></sgds-table-cell>
+        <sgds-table-cell><div class="border-demo sgds:border-form-danger-default sgds:p-md">Form danger border</div></sgds-table-cell>
+      </sgds-table-row>
+    </sgds-table>
   </section>
 
   <script>
