--- a/playground/utility/text-color.html
+++ b/playground/utility/text-color.html
@@ -4,28 +4,7 @@
 <link href="../../src/css/sgds.css" rel="stylesheet" type="text/css" />
 <link href="../css/utility.css" rel="stylesheet" type="text/css" />
 
-<style>
-  body {
-    background-color: var(--sgds-bg-default);
-    color: var(--sgds-color-default);
-  }
-  code {
-    background-color: var(--sgds-surface-raised);
-    padding: 2px 6px;
-    border-radius: 4px;
-    font-family: monospace;
-  }
-  .dark-bg {
-    background-color: var(--sgds-bg-fixed-dark);
-    padding: 8px;
-  }
-  .light-bg {
-    background-color: var(--sgds-bg-fixed-light);
-    padding: 8px;
-  }
-</style>
-
-<body class="sgds:p-2-xl">
+<body class="sgds:p-2-xl sgds:bg-default sgds:text-default">
   <div class="sgds:sticky sgds:top-0 sgds:flex sgds:justify-between sgds:items-center sgds:mb-2-xl sgds:bg-default sgds:py-2-xl">
     <h1>Text Colors</h1>
     <sgds-button id="night-theme" variant="ghost">
