chore(Sidebar): corrected alignment of option and added section keyboard event

--- a/playground/Sidebar.html
+++ b/playground/Sidebar.html
@@ -59,7 +59,7 @@
 
     <div class="container">
       <div class="sidebar-wrapper">
-        <sgds-sidebar overlayPosition="right">
+        <sgds-sidebar>
           <div slot="brand-name">brand-name</div>
           <!-- Main Navigation Section -->
           <sgds-sidebar-section title="Main" collapsible>
