docs(utility): add stories and documentation for the utlity api

--- a/playground/utility/font-weight.html
+++ b/playground/utility/font-weight.html
@@ -22,24 +22,24 @@
         <sgds-table-head>Preview</sgds-table-head>
       </sgds-table-row>
       <sgds-table-row>
-        <sgds-table-cell><code class="sgds:bg-surface-raised sgds:px-xs sgds:py-3-xs sgds:rounded-sm sgds:font-mono">sgds:font-weight-light</code></sgds-table-cell>
-        <sgds-table-cell><code class="sgds:bg-surface-raised sgds:px-xs sgds:py-3-xs sgds:rounded-sm sgds:font-mono">--sgds-font-weight-light</code></sgds-table-cell>
-        <sgds-table-cell><div class="sgds:font-weight-light sgds:text-lg">Light font weight (300)</div></sgds-table-cell>
+        <sgds-table-cell><code class="sgds:bg-surface-raised sgds:px-xs sgds:py-3-xs sgds:rounded-sm sgds:font-mono">sgds:font-light</code></sgds-table-cell>
+        <sgds-table-cell><code class="sgds:bg-surface-raised sgds:px-xs sgds:py-3-xs sgds:rounded-sm sgds:font-mono">--sgds-font-light</code></sgds-table-cell>
+        <sgds-table-cell><div class="sgds:font-light sgds:text-lg">Light font weight (300)</div></sgds-table-cell>
       </sgds-table-row>
       <sgds-table-row>
-        <sgds-table-cell><code class="sgds:bg-surface-raised sgds:px-xs sgds:py-3-xs sgds:rounded-sm sgds:font-mono">sgds:font-weight-regular</code></sgds-table-cell>
-        <sgds-table-cell><code class="sgds:bg-surface-raised sgds:px-xs sgds:py-3-xs sgds:rounded-sm sgds:font-mono">--sgds-font-weight-regular</code></sgds-table-cell>
-        <sgds-table-cell><div class="sgds:font-weight-regular sgds:text-lg">Regular font weight (400)</div></sgds-table-cell>
+        <sgds-table-cell><code class="sgds:bg-surface-raised sgds:px-xs sgds:py-3-xs sgds:rounded-sm sgds:font-mono">sgds:font-regular</code></sgds-table-cell>
+        <sgds-table-cell><code class="sgds:bg-surface-raised sgds:px-xs sgds:py-3-xs sgds:rounded-sm sgds:font-mono">--sgds-font-regular</code></sgds-table-cell>
+        <sgds-table-cell><div class="sgds:font-regular sgds:text-lg">Regular font weight (400)</div></sgds-table-cell>
       </sgds-table-row>
       <sgds-table-row>
-        <sgds-table-cell><code class="sgds:bg-surface-raised sgds:px-xs sgds:py-3-xs sgds:rounded-sm sgds:font-mono">sgds:font-weight-semibold</code></sgds-table-cell>
-        <sgds-table-cell><code class="sgds:bg-surface-raised sgds:px-xs sgds:py-3-xs sgds:rounded-sm sgds:font-mono">--sgds-font-weight-semibold</code></sgds-table-cell>
-        <sgds-table-cell><div class="sgds:font-weight-semibold sgds:text-lg">Semibold font weight (600)</div></sgds-table-cell>
+        <sgds-table-cell><code class="sgds:bg-surface-raised sgds:px-xs sgds:py-3-xs sgds:rounded-sm sgds:font-mono">sgds:font-semibold</code></sgds-table-cell>
+        <sgds-table-cell><code class="sgds:bg-surface-raised sgds:px-xs sgds:py-3-xs sgds:rounded-sm sgds:font-mono">--sgds-font-semibold</code></sgds-table-cell>
+        <sgds-table-cell><div class="sgds:font-semibold sgds:text-lg">Semibold font weight (600)</div></sgds-table-cell>
       </sgds-table-row>
       <sgds-table-row>
-        <sgds-table-cell><code class="sgds:bg-surface-raised sgds:px-xs sgds:py-3-xs sgds:rounded-sm sgds:font-mono">sgds:font-weight-bold</code></sgds-table-cell>
-        <sgds-table-cell><code class="sgds:bg-surface-raised sgds:px-xs sgds:py-3-xs sgds:rounded-sm sgds:font-mono">--sgds-font-weight-bold</code></sgds-table-cell>
-        <sgds-table-cell><div class="sgds:font-weight-bold sgds:text-lg">Bold font weight (700)</div></sgds-table-cell>
+        <sgds-table-cell><code class="sgds:bg-surface-raised sgds:px-xs sgds:py-3-xs sgds:rounded-sm sgds:font-mono">sgds:font-bold</code></sgds-table-cell>
+        <sgds-table-cell><code class="sgds:bg-surface-raised sgds:px-xs sgds:py-3-xs sgds:rounded-sm sgds:font-mono">--sgds-font-bold</code></sgds-table-cell>
+        <sgds-table-cell><div class="sgds:font-bold sgds:text-lg">Bold font weight (700)</div></sgds-table-cell>
       </sgds-table-row>
     </sgds-table>
   </section>
@@ -50,10 +50,10 @@
     <div class="sgds:mb-md">
       <h3 class="sgds:mb-sm">Font Weight Comparison</h3>
       <div class="sgds:bg-surface-raised sgds:p-lg sgds:flex sgds:flex-col sgds:gap-sm">
-        <p class="sgds:font-weight-light sgds:text-xl">This is light text - perfect for subtle content</p>
-        <p class="sgds:font-weight-regular sgds:text-xl">This is regular text - ideal for body content</p>
-        <p class="sgds:font-weight-semibold sgds:text-xl">This is semibold text - great for subheadings</p>
-        <p class="sgds:font-weight-bold sgds:text-xl">This is bold text - excellent for emphasis</p>
+        <p class="sgds:font-light sgds:text-xl">This is light text - perfect for subtle content</p>
+        <p class="sgds:font-regular sgds:text-xl">This is regular text - ideal for body content</p>
+        <p class="sgds:font-semibold sgds:text-xl">This is semibold text - great for subheadings</p>
+        <p class="sgds:font-bold sgds:text-xl">This is bold text - excellent for emphasis</p>
       </div>
     </div>
   </section>
